--- a/client/src/Components/Styles/RankListItem.css
+++ b/client/src/Components/Styles/RankListItem.css
@@ -3,15 +3,26 @@
     justify-content: space-evenly;
     width: 100%;
     color: #fff;
-    margin-left: 3vw;
+    /* margin-left: 3vw; */
+    padding: 10px;
+    border-bottom: 1px solid var(--bg-color);
 }
 
 .rank-list-item p {
-    /* width: max-content; */
     text-align: left;
+    width: 150px;
 }
 
 .username {
-    width: 50px;
+    width: 110px !important;
+    height: 20px;
     overflow: hidden;
+    margin-left: 10px;
+}
+
+.leaderboard-user-icon {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    /* padding-right: 10px; */
 }
