--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -5,7 +5,7 @@
     --caret-color: #79a617;
     --main-color: #79a617;
     --sub-color: #8b8b8b;
-    --popup-color: #000000cf;
+    --popup-color: #0e0e0e;
     --sub-color-transparent: #9c9c9c14; 
     --sub-alt-color: #141516;
     --text-color: #e7eae0;
